# senseye-cameras

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
docs/: Makefile
docs/source/: conf.py  intro.rst  modules.rst  senseye_cameras.input.rst  senseye_cameras.output.rst  senseye_cameras.rst
examples/input/: create_compressed_video_input.py  create_ffmpeg_input.py  create_pylon_input.py  create_raw_video_input.py  create_usb_input.py
examples/output/: create_ffmpeg_video_output.py  create_file_output.py  create_raw_video_output.py
examples/stream/: ffmpeg_to_ffmpeg.py  ffmpeg_to_h264_to_raw.py  frame_interceptors.py  portaudio_to_wav.py  pylon_stream.py  pylon_to_mkv.py  pylon_to_mp4.py  pyueye_stream.py  pyueye_to_avi.py  pyueye_to_raw.py  usb_to_avi.py  usb_to_file.py  usb_to_pipe.py
senseye_cameras/: loop_thread.py  reader.py  stream.py  writer.py
senseye_cameras/input/: camera_ffmpeg.py  camera_pylon.py  camera_raw_video.py  camera_ueye.py  camera_usb.py  input.py  input_factory.py
senseye_cameras/output/: file.py  h264_pipe.py  output.py  output_factory.py  video_ffmpeg.py
