[project]
name = "senseye_cameras"
version = "0.1.0"
description = "Senseye Camera Utilities"
authors = [
    "Senseye Inc <engineeringadmin@senseye.co>"
]
license = "MIT"
readme = "README.md"
python = "^3.6"
repository = "https://github.com/senseyeinc/senseye_cameras"
documentation = "https://senseye-cameras.readthedocs.io/en/latest/"

[dependencies]
sounddevice = "^0.3.14"
soundfile = "^0.10.3"
numpy = "^1.14.5"
opencv-python = "^4.1.2.30"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
# exclude = '''
